--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <nav id="page-nav-wrap">
+    <h1>Logo</h1>
     <label for="hamburger">&#9776;</label>
     <input type="checkbox" id="hamburger" />
     <div id="page-nav">
@@ -30,6 +31,23 @@
       </a>
     </div>
   </nav>
+  <main>
+    <section class="intro">
+      <h2>Introduction</h2>
+      <p>A few paragrah about how good our product is</p>
+    </section>
+    <section class="gap">
+      <div class="image-carosoule">
+        <p>IMAGES</p>
+      </div>
+      <div class="colour">
+        <div class="red col">R</div>
+        <div class="green col">G</div>
+        <div class="blue col">B</div>
+        <div class="alpha col">A</div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
